# RustyPlanner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: background_service.rs  events.rs  lib.rs  main.rs  notification.rs  tui.rs  utils.rs
src/events/: event.rs  event_manager.rs  mod.rs
src/miscs/: arg_parsing.rs  help.rs  mod.rs  notification.rs  utils.rs
tests/: rustyplanner.rs
