[package]
name = "RustyPlanner"
version = "0.1.0"
edition = "2021"
default-run = "RustyPlanner"
readme = "README.md"
license = "MIT"
description = "A command-line tool for managing your appointments and events."

[[bin]]
name = "RustyPlanner_background_service"
path = "src/background_service.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
directories = "5.0.1"
notify = "8.0.0"
notify-rust = "4.11.3"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
futures = "0.3.18"
users = "0.11.0"
daemonize = "0.5.0"
