[package]
name = "RustyPlanner"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A command-line tool for managing your appointments and events."
default-run = "RustyPlanner"

[lib]
name = "rusty_planner_lib"
path = "src/lib.rs"

[[bin]]
name = "RustyPlanner"
path = "src/main.rs"

[[bin]]
name = "RustyPlannerTUI"
path = "src/tui.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
directories = "6.0.0"
notify = "8.0.0"
notify-rust = "4.11.5"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.18"
uzers = "0.12.1"
signal-hook = { version = "0.3.4", features = ["extended-siginfo"] }
daemonize = {version="0.5.0", optional=true}

color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = {version="0.29.0", features = ["widget-calendar"]}

[features]
unix = ["daemonize"]
mac = ["daemonize"]
win = []